# roth-conversions

./: .gitignore  README.md  frank.md  main.py  pyproject.toml  retirement_story copy.ipynb  retirement_story.ipynb  retirement_visual.ipynb  roth_conversion_optimizer.ipynb
comments/: frank_kistner.txt  frank_kistner_1_22_2026  frank_kistner_1_22_2026_implemented.md
configs/: README.md  frank_config.template.toml  retirement_config.example.toml  retirement_config.minimal_roth.toml  retirement_config.scenario_asset_location_enabled.toml  retirement_config.scenario_couple_60_61_3m_assets_2m_ira.toml  retirement_config.scenario_ira_basis_pro_rata.toml  retirement_config.scenario_large_charity_qcd.toml  retirement_config.scenario_niit_trigger.toml  retirement_config.scenario_no_convert_heirs_low_tax_rate.toml  retirement_config.scenario_no_convert_roth_lower_return.toml  retirement_config.scenario_no_convert_small_ira_high_roth.toml  retirement_config.scenario_objective_legacy.toml  retirement_config.scenario_objective_npv_taxes.toml  retirement_config.scenario_qcd_70_5_cap_111k.toml  retirement_config.scenario_roth_5yr_penalty_home_purchase.toml  retirement_config.scenario_ss_taxation_stress.toml  retirement_config.scenario_state_tax_enabled.toml  retirement_config.scenario_widow_event_soon.toml  retirement_config.scenario_wife_rmd_husband_no_rmd_5m_ira.toml  retirement_config.template.toml  retirement_story_config.template.toml  retirement_visual_config.template.toml  roth_conversion_optimizer_config.template.toml
docs/: README.md  crosswalk.md  irs-tax-data.md  scope.md  (+1 more)
(+109 files in other folders)
