[project]
name = "retirement-toolkit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pypdf>=6.6.0",
    "reportlab>=4.4.4",
    "scipy>=1.16.3",
]

[project.scripts]
roth-conversions = "roth_conversions.cli:main"
retirement-toolkit = "retirement_toolkit.cli:main"
